Fixed Header alignment

--- a/styles/app.css
+++ b/styles/app.css
@@ -86,6 +86,7 @@ html {
 .header {
   text-align: center;
   height: auto;
+  margin-bottom: 10px;
 }
 
 .header h1 {
